--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
 		"wrangler": "^3.60.3"
 	},
 	"dependencies": {
+		"@hotwired/stimulus": "^3.2.2",
+		"@hotwired/turbo": "^8.0.12",
 		"cloudworker-router": "^4.1.5",
 		"monaco-editor": "^0.52.0",
 		"tempstream": "^0.4.5"
