--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
 		"target": "es2021",
-		"lib": ["es2021"],
+		"lib": ["es2021", "dom"],
 		"module": "es2022",
 		"moduleResolution": "Bundler",
 		"types": ["@cloudflare/workers-types/2023-07-01"],
